# tft-analyst

./: .gitignore  .mcp.json  CLAUDE.md  PRD.md  pyproject.toml
data/: champions.json
skill/: tft.md
src/tft_analyst/: server.py
src/tft_analyst/crawler/: cli.py  lolchess.py  metatft.py
src/tft_analyst/data/: models.py  store.py
src/tft_analyst/tools/: add_buildup.py  get_meta.py  get_stats.py  quiz.py  recommend.py  record_game.py
