[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tft-analyst"
version = "0.1.0"
description = "개인용 TFT 분석가 도구 — Claude Code MCP 서버"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
tft-analyst = "tft_analyst.server:main"
tft-crawl = "tft_analyst.crawler.cli:main"
